--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "pretest": "npm run htmlhint && npm run eslint && npm run stylelint",
     "test": "jest --coverage",
     "start": "vite dev src",
+    "start": "npm run dev",
     "dev": "vite dev src",
+
     "build": "vite build",
     "preview": "vite preview",
     "deploy": "./deploy.sh"
